Fix alignment of video scrubber in element lists from dashboard (#1155)

--- a/web/war/src/main/webapp/less/search/search.less
+++ b/web/war/src/main/webapp/less/search/search.less
@@ -196,9 +196,6 @@ width: 215px;
     }    
   }
 
-  .org-visallo-video-scrubber {
-      position: static;
-  }
 }
 
 .filter-info {
